
 <!-- the lefthand tool button bar -->
 <param name="TOOL_CURSOR" value="yes"><!-- needed for mouse action -->
 <param name="TOOL_UNSELECT" value="yes"> <!--unselect studen drawing -->
 <param name="TOOL_ROTATOR" value="yes">
 <param name="TOOL_ERASOR" value="yes">
 <param name="TOOL_DIALOG" value="mo">
 <param name="TOOL_EDIT" value="no">
 <param name="TOOL_SETATOM" value="yes">
 <param name="TOOL_SINGLE" value="yes">
 <param name="TOOL_DOUBLE" value="yes">
 <param name="TOOL_TRIPLE" value="yes">
 <param name="TOOL_ZERO" value="yes">
 <param name="TOOL_INCLINED" value="yes">
 <param name="TOOL_DECLINED" value="yes">
 <param name="TOOL_CHARGE" value="yes">
 <param name="TOOL_UNDO=" value="yes">
 <param name="TOOL_REDO=" value="yes">
 <param name="TOOL_TEMPLATE" value="no">
 <param name="TOOL_CUT" value="no">
 <param name="TOOL_COPY" value="no">
 <param name="TOOL_PASTE" value="no">
 <!-- the top menu -->
 <param name="MENU_BLOCK" value="yes">
 <param name="MENU_SELECT" value="yes">
 <param name="MENU_TRANSFORM" value="yes">
 <param name="MENU_ZOOM" value="yes">
 <param name="MENU_SHOW" value="yes">
 <param name="MENU_HYDROGEN" value="yes">
 <param name="MENU_STEREO" value="yes">
 <param name="MENU_HELP" value="yes">
 (java unavailable)
 </applet>

All public function in the applet [there are more but not interesting right now]

[ use : document.GetElementById('WIMSchem').APPLETFUNCTION() ]
ReadAtomSelection();
ReadBondSelection()
GetMoleculeMDLMol()
SetMoleculeMDLMol(wimschem_file)
GetMoleculeNative()
SetMoleculeNative(str)
GetMoleculeMDLMol()

20/02/2010
Invisible C's can no longer be selected...will not be added to selection array
20/02/2010
Invisible C's are visible when selected ...

7/03/2010
Use "Select_Icon_button & left mouse button" to select/deselect atoms/bonds.
Tooltip timing is adjusted: now students can easily read the usage of buttons

27/12/2010
Uniform build.