@@ -9,7 +9,8 @@
     <description>WIMSchem: Sketcher of Elements</description>
 
     <property name="ver" value="1.19"/>
-
+    <!-- image directory for extended help on WIMSchem (B. Perrin-Riou) -->
+    <property name="wims_images_dir" location="../../../../public_html/gifs/Wimschem"/>
     <property name="src" location="src"/>
     <!--<property name="extern" location="extern"/>-->
     <property name="build" location="build"/>
@@ -26,6 +27,8 @@
 	<tstamp/>
 	<!-- Create the build directory structure used by compile -->
 	<mkdir dir="${build}"/>
+	<!-- Create image directory for extended help on WIMSchem (B. Perrin-Riou) -->
+	<mkdir dir="${wims_images_dir}"/>
     </target>
 
     <target name="compile" depends="init" description="compile the source">
@@ -57,6 +60,10 @@
     	</exec>
     	<exec executable="/bin/sh">
     	    <arg line="-c 'cp ${src}/images/*.gif ${build}/images'"/>
+    	</exec>
+	<!-- Copy images to directory for extended help on WIMSchem (B. Perrin-Riou) -->
+    	<exec executable="/bin/sh">
+    	    <arg line="-c 'cp cp ${src}/images/*.png ${wims_images_dir}'"/>
     	</exec>
     	<exec executable="/bin/sh">
     	    <arg line="-c 'cp ${src}/templ/*.el ${build}/templ'"/>
