@@ -319,3 +319,7 @@ Tooltip timing is adjusted: now students can easily read the usage of buttons
 
 27/12/2010
 Uniform build.
+
+16/1/2012
+Changed build.xml : now copies *.png  to ../../../../public_html/gifs/Wimschem 
+Used for extended non_applet-based  helpfiles (B. Perrin-Riou)
